    defining those parameters would throw a System.FormatException rather than
    a MySqlException (bug #29312)    
  - Fixed problem where a command timing out just after it actually finished would cause
    an exception to be thrown on the command timeout thread which would then be seen
    as an unhandled exception. 
    
Version 5.0.7 5/16/2007

  Bugs fixed
  ----------
  Bug #27269 MySqlConnection.Clone does not mimic SqlConnection.Clone behaviour 
  Bug #27289 Transaction is not rolledback when connection close 
  Bug #26147 "User Id" problem during connection creation 
  Bug #27240 Property value characterset not retrieved/fetched in conn wizard 
  Bug #25947 CreateFormat/CreateParameters Column of DataTypes collection incorrect for CHAR 
  Bug #27765 Logging does not work
  Bug #27679 MySqlCommandBuilder.DeriveParameters ignores UNSIGNED flag
  Bug #27668 FillSchema and Stored Proc with an out parameter
  Bug #28167 Poor performance building connection string (thanks Maxim!)
  Bug #26041 Connection Protocol Property Error in PropertyGrid Control
  Bug #26754 EnlistTransaction throws false MySqlExeption "Already enlisted"
  Bug #23342 Incorrect parsing of Datetime object for MySQL versions below 4.1
  
  Other changes
  -------------
  Installer now works if XML comments are found in machine.config
  GetSchema will now attempt to unquote identifiers passed in as restrictions
  The MySqlCommand object now properly clones the CommandType and CommandTimeout properties  
  
Version 5.0.6 3/21/2007

  Bugs fixed
  ----------
  Bug #27135 MySqlParameterCollection and parameters added with Insert Method 
  Bug #27253 Installer : Company info is different 
  Bug #27187 cmd.Parameters.RemoveAt("Id") will cause an error if the last item is requested   
  Bug #27093 Exception when using large values in IN UInt64 parameters 
  Bug #27221 describe SQL command returns all byte array on MySQL versions older than 4.1.15 