@@ -24,6 +24,9 @@ Version 5.0.8
   - Fixed problem where a command timing out just after it actually finished would cause
     an exception to be thrown on the command timeout thread which would then be seen
     as an unhandled exception. 
+  - Fixed bug where Connecor/Net was hand building some date time patterns rather than using
+    the patterns provided under CultureInfo.  This caused problems with some calendars that do
+    not support the same ranges as Gregorian.  (Bug #29931)
     
 Version 5.0.7 5/16/2007
 
